# wordwank

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  THANKS.md  global-values.yaml
.agent/: AUTHENTICATION_IMPLEMENTATION.md
.agent/workflows/: arkham-remote.md  maintenance.md
charts/wordwank/: Chart.yaml  values.yaml
helm/: Chart.yaml  secrets.yaml.example  values.yaml  values.yaml.example
helm/charts/: backend-0.10.0.tgz  dictd-0.10.0.tgz  frontend-0.10.0.tgz  wordd-0.10.1.tgz
helm/resources/: letsencrypt-issuer.yaml  patch-cert-manager-hosts.sh
helm/templates/: configmap-locales.yaml  db-init-configmap.yaml  ingress.yaml  ollama.yaml  postgresql-pv.yaml  postgresql-storageclass.yaml  secrets.yaml
scripts/: hunspell-to-lexicon.pl  init-tilemasters.sh  init-wordd.sh  sync-version.js
src/wordd/: Dockerfile
srv/backend/: Dockerfile  (+4 more)
srv/wordd/: .gitignore  Cargo.toml  Dockerfile  baseline_tests.txt
srv/wordd/helm/: Chart.yaml  values.yaml
srv/wordd/helm/templates/: deployment.yaml  ingress.yaml  service.yaml
srv/wordd/share/words/de/: lexicon.txt
srv/wordd/share/words/en/: README.md  inclusions.txt  insertions.txt  lexicon.txt  tile-config.yaml
srv/wordd/share/words/es/: lexicon.txt  tile-config.yaml
srv/wordd/share/words/fr/: lexicon.txt  lexicon.txt.utf16  normalize.pl
srv/wordd/share/words/ru/: lexicon.txt
srv/wordd/src/: main.rs  models.rs  utils.rs
srv/wordd/src/handlers/: config.rs  mod.rs  random.rs  validation.rs
srv/wordd/src/services/: distribution.rs  generator.rs  letter_classifier.rs  mod.rs  word_loader.rs
(+148 files in other folders)
