[package]
name = "wordd"
version = "1.1.0"
edition = "2021"
authors = ["Ron Straight <straightre@gmail.com>"]
description = "Word validity and lookup service for Wordwank"
license = "MIT"

[dependencies]
actix-web = "4"
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
